Checked to add Entra to service